--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -14,8 +14,13 @@ jobs:
           token: ${{ secrets.METRICS_TOKEN }}
           user: Ndzull
           template: classic
-          base: header, community, repositories
-          plugin_languages: yes
-          plugin_languages_sections: most-used
+          base: header, community, repositories, metadata
           plugin_habits: yes
+          plugin_habits_facts: yes
           plugin_habits_charts: yes
+          plugin_languages: yes
+          plugin_languages_ignored: html, css
+          plugin_languages_details: bytes-size, percentage
+          plugin_topics: yes
+          plugin_topics_limit: 15
+          plugin_topics_mode: icons
